--- a/JAVA/牛客.md
+++ b/JAVA/牛客.md
@@ -8,3 +8,4 @@
 5.假设利用 return 语句从 try 语句块中退出。在方法返回前，finally子句的内容将被执行。如果 finally 子句中也有一个 return 语句，这个返回值将会覆盖原始的返回值
 6.UML ：http://www.sohu.com/a/121263400_355142
 7.OutputStream这个类包含flush()方法。
+8.被static修饰的变量称为静态变量，静态变量属于整个类，而局部变量属于方法，只在改方法有效，总结static不能修饰局部变量
